--- a/Projeto-site/obras.html
+++ b/Projeto-site/obras.html
@@ -18,7 +18,7 @@
     <header>
         <!--BARRA DE MENU-->
         <div class="menu">
-            <div class="container">
+            <div class="container flex justify-space">
                 <div class="logo">
                     <a href="index.html">
                         <h1>Colorful Art</h1>
@@ -49,7 +49,7 @@
                     </ul>
                 </nav>
 
-                <nav class="links autenticacao">
+                <nav class="links autenticacao" id="autent">
                     <li>
                         <a class="botao" id="login_acesso">Login</a>
                     </li>
@@ -57,6 +57,9 @@
                         <a class="botao destaque" id="cadastrar_acesso">Cadastre-se</a>
                     </li>
                 </nav>
+                <div class="nome-logado">
+                    Olá, <span id="nome_logado"></span>
+                </div>
             </div>
         </div>
     </header>
@@ -309,3 +312,12 @@
 </body>
 
 </html>
+<script>
+    let esconde = sessionStorage.mudaMenu;
+        let aparece = sessionStorage.mudaMenuLogin;
+        let nome= sessionStorage.nomeUsuario;
+        document.getElementById('nome_logado').innerHTML = nome;
+        autent.style.display = esconde;
+        document.querySelector('.nome-logado').style.display = aparece;
+
+</script>
