--- a/Projeto-site/artistas.html
+++ b/Projeto-site/artistas.html
@@ -101,7 +101,7 @@
                 <hr>
                 <ul>
                     <li class="mov-card" data-anime="left">
-                        <div class="mov-foto">
+                        <div class="mov-foto" onclick="access()">
                             <img src="img/paintings/Leonardo-da-Vinci.jpg">
                             <div class="mov-nome">
                                 <h3>Top Artistas</h3>
@@ -109,7 +109,7 @@
                         </div>
                     </li>
                     <li class="mov-card" data-anime="left">
-                        <div class="mov-foto">
+                        <div class="mov-foto" onclick="access()">
                             <img src="img/paintings/susano-correia.jpg">
                             <div class="mov-nome">
                                 <h3>Artistas Revelação</h3>
@@ -117,7 +117,7 @@
                         </div>
                     </li>
                     <li class="mov-card" data-anime="left">
-                        <div class="mov-foto">
+                        <div class="mov-foto" onclick="access()">
                             <img src="img/paintings/tarsila-do-amaral.jpg">
                             <div class="mov-nome">
                                 <h3>Artistas Nacionais</h3>
@@ -193,23 +193,23 @@
                         <ul>
                             <li>
                                 <a href="https://www.facebook.com/giwkiss/" target="_blank">
-                                    <img src="img/facebook.png" alt="">
+                                    <img src="img/facebook.png">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/nuvemexotica/?hl=pt-br" target="_blank">
-                                    <img src="img/instagram.png" alt="">
+                                    <img src="img/instagram.png">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/NuvemExotica" target="_blank">
-                                    <img src="img/twitter.png" alt="">
+                                    <img src="img/twitter.png">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.youtube.com/channel/UCc0SGr_WWw9t4iKfi2NP6KQ?view_as=subscriber"
                                     target="_blank">
-                                    <img src="img/youtube.png" alt="">
+                                    <img src="img/youtube.png">
                                 </a>
                             </li>
                         </ul>
@@ -238,6 +238,9 @@
             <h2>Login</h2>
             <img src="img/palette.png" alt="tela">
             <form id="formulario_login">
+
+                <div id="mensagem_erro_login" class="error"></div>
+
                 <input type="text" class="input" placeholder="E-mail" id="login_email">
                 <div class="border-input"></div>
 
@@ -291,6 +294,7 @@
         </div>
     </div>
 
+    <script src="js/funcional-artistas.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/form.js"></script>
     <script src="js/animacoes.js"></script>
@@ -299,15 +303,3 @@
 </body>
 
 </html>
-<script>
-
-    // ALTERAÇÃO DO MENU AO FAZER LOGIN
-
-    let esconde = sessionStorage.mudaMenu;
-    let aparece = sessionStorage.mudaMenuLogin;
-    let nome = sessionStorage.nomeUsuario;
-    document.getElementById('nome_logado').innerHTML = nome;
-    autent.style.display = esconde;
-    document.querySelector('.nome-logado').style.display = aparece;
-
-</script>
