--- a/Projeto-site/index.html
+++ b/Projeto-site/index.html
@@ -484,23 +484,23 @@
                         <ul>
                             <li>
                                 <a href="https://www.facebook.com/giwkiss/" target="_blank">
-                                    <img src="img/facebook.png" alt="">
+                                    <img src="img/facebook.png">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/nuvemexotica/?hl=pt-br" target="_blank">
-                                    <img src="img/instagram.png" alt="">
+                                    <img src="img/instagram.png">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/NuvemExotica" target="_blank">
-                                    <img src="img/twitter.png" alt="">
+                                    <img src="img/twitter.png">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.youtube.com/channel/UCc0SGr_WWw9t4iKfi2NP6KQ?view_as=subscriber"
                                     target="_blank">
-                                    <img src="img/youtube.png" alt="">
+                                    <img src="img/youtube.png">
                                 </a>
                             </li>
                         </ul>
@@ -529,6 +529,9 @@
             <h2>Login</h2>
             <img src="img/palette.png" alt="tela">
             <form id="formulario_login">
+
+                <div id="mensagem_erro_login" class="error"></div>
+
                 <input type="email" class="input" placeholder="E-mail" id="login_email">
                 <div class="border-input"></div>
 
